--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -16,6 +16,31 @@
         box-sizing: border-box;
     }
 
+    .item-image
+    {
+        width: 450px;
+        height: 600px;
+        position: relative;
+
+        .image-main
+        {
+            width: 100%;
+            height: 100%;
+        }
+
+        .image-small
+        {
+            width: 70px;
+            height: 65px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            background: url("images/preview_photo.png");
+            background-size: 100%;
+            background-position: center center;
+            border-bottom: 2px solid var(--chambray);
+        }
+    }
 }
 
 .item-details::backdrop
