--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -24,7 +24,26 @@
 
         .category
         {
+            height: 50px;
             flex: 0 0 auto;
+            display: flex;
+            justify-content: space-between;
+            border-bottom: 2px solid var(--mercury);
+
+            .item-category
+            {
+                align-self: center;
+                padding-left: 50px;
+                color: var(--shark);
+                font-size: 14px;
+            }
+
+            .close
+            {
+                width: 54px;
+                height: 50px;
+                background: url("images/close.svg");
+            }
         }
 
         .main-info
