--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -94,6 +94,49 @@
             color: var(--chambray);
             font-size: 12px;
         }
+
+        .select-size
+        {
+            max-width: 450px;
+            height: 50px;
+            display: flex;
+            margin-bottom: 40px;
+            margin-left: 50px;
+            border: 2px solid var(--mercury);
+
+            .size
+            {
+                flex: 1;
+            }
+
+            .size::after
+            {
+                content: attr(value);
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                box-sizing: padding-box;
+                margin-left: -2px;
+                border-right: 2px solid var(--mercury);
+                color: var(--shark);
+                font-size: 14px;
+                text-transform: uppercase;
+            }
+
+            .size:last-of-type::after
+            {
+                border-right: 0;
+            }
+
+            .size:checked::after
+            {
+                margin-top: -2px;
+                color: var(--chambray);
+                border: 2px solid var(--chambray);
+            }
+        }
     }
 
     .item-image
