--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -137,6 +137,45 @@
                 border: 2px solid var(--chambray);
             }
         }
+
+        .select-color
+        {
+            width: 55px;
+            height: 25px;
+            display: flex;
+            justify-content: space-between;
+            margin-left: 50px;
+
+            .color
+            {
+                width: 25px;
+            }
+
+            .color::after
+            {
+                content: "";
+                width: 100%;
+                height: 100%;
+                display: block;
+            }
+
+            .color:nth-of-type(1)::after
+            {
+                background: var(--d-ocre);
+            }
+
+            .color:nth-of-type(2)::after
+            {
+                background: var(--d-grey);
+            }
+
+            .color:checked::after
+            {
+                background-image: url("images/shape.svg");
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+        }
     }
 
     .item-image
