--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -184,6 +184,17 @@
             font-size: 14px;
             line-height: 22px;
         }
+
+        .add-bag
+        {
+            width: 100%;
+            height: 50px;
+            background: var(--chambray);
+            color: #fff;
+            font-size: 14px;
+            text-align: center;
+            text-transform: uppercase;
+        }
     }
 
     .item-image
