--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -63,6 +63,7 @@
         {
             margin-left: 50px;
             color: var(--gray-chateau);
+            font-family: var(--soursesanproreg);
             font-size: 14px;
         }
 
@@ -92,6 +93,7 @@
         {
             text-decoration: none;
             color: var(--chambray);
+            font-family: var(--soursesanproreg);
             font-size: 12px;
         }
 
@@ -181,6 +183,7 @@
         {
             margin: 40px * 41px 50px;
             color: var(--abbey);
+            font-family: var(--soursesanproreg);
             font-size: 14px;
             line-height: 22px;
         }
