--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -43,6 +43,7 @@
                 width: 54px;
                 height: 50px;
                 background: url("images/close.svg");
+                cursor: pointer;
             }
         }
 
@@ -125,6 +126,7 @@
                 color: var(--shark);
                 font-size: 14px;
                 text-transform: uppercase;
+                cursor: pointer;
             }
 
             .size:last-of-type::after
@@ -159,6 +161,7 @@
                 width: 100%;
                 height: 100%;
                 display: block;
+                cursor: pointer;
             }
 
             .color:nth-of-type(1)::after
@@ -197,6 +200,7 @@
             font-size: 14px;
             text-align: center;
             text-transform: uppercase;
+            cursor: pointer;
         }
     }
 
