--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -154,26 +154,25 @@
                 width: 25px;
             }
 
-            .color::after
+            .color .color-box
             {
-                content: "";
                 width: 100%;
                 height: 100%;
                 display: block;
                 cursor: pointer;
             }
 
-            .color:nth-of-type(1)::after
+            .color:nth-of-type(1) .color-box
             {
                 background: var(--d-ocre);
             }
 
-            .color:nth-of-type(2)::after
+            .color:nth-of-type(2) .color-box
             {
                 background: var(--d-grey);
             }
 
-            .color:checked::after
+            .color input[type=radio]:checked + .color-box
             {
                 background-image: url("images/shape.svg");
                 background-repeat: no-repeat;
