--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -29,7 +29,7 @@
         flex: 0 0 auto;
         display: flex;
         justify-content: space-between;
-        border-bottom: 2px solid var(--mercury);
+        border-bottom: 1px solid var(--mercury);
 
         .item-category
         {
@@ -59,6 +59,7 @@
         margin-left: 50px;
         color: var(--shark);
         font-size: 34px;
+        line-height: 30px;
     }
 
     .item-code
@@ -67,13 +68,15 @@
         color: var(--gray-chateau);
         font-family: var(--soursesanproreg);
         font-size: 14px;
+        line-height: 35px;
     }
 
     .item-price
     {
-        margin: 35px * 55px 50px;
+        margin: 25px * 55px 50px;
         color: var(--chambray);
         font-size: 22px;
+        line-height: 21px;
     }
 
     .item-size, .item-color
@@ -83,12 +86,13 @@
         color: var(--shark);
         font-size: 12px;
         text-transform: uppercase;
+        line-height: 11px;
     }
 
     .item-size
     {
         display: inline-block;
-        padding-right: 10px;
+        padding-right: 5px;
     }
 
     .size-details
@@ -106,7 +110,7 @@
         display: flex;
         margin-bottom: 40px;
         margin-left: 50px;
-        border: 2px solid var(--mercury);
+        border: 1px solid var(--mercury);
 
         .size
         {
@@ -119,7 +123,8 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-left: -2px;
+                margin-left: -1px;
+                padding: * 1px;
                 box-sizing: initial;
                 color: var(--shark);
                 font-size: 14px;
@@ -143,15 +148,15 @@
 
     .select-color
     {
-        width: 55px;
-        height: 25px;
+        width: 53px;
+        height: 24px;
         display: flex;
         justify-content: space-between;
         margin-left: 50px;
 
         .color
         {
-            width: 25px;
+            width: 24px;
 
             .color-box
             {
@@ -182,7 +187,7 @@
 
     .item-description
     {
-        margin: 40px * 41px 50px;
+        margin: 35px * 48px 50px;
         color: var(--abbey);
         font-family: var(--soursesanproreg);
         font-size: 14px;
@@ -192,7 +197,8 @@
     .add-bag
     {
         width: 100%;
-        height: 50px;
+        height: 57px;
+        padding-right: 30px;
         background: var(--chambray);
         color: #fff;
         font-size: 14px;
@@ -205,7 +211,7 @@
 .item-image
 {
     width: 450px;
-    height: 600px;
+    height: 601px;
     position: relative;
 
     .image-main
