--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -6,9 +6,12 @@
 
 .item-details
 {
-    max-width: 1000px;
+    width: 1000px;
+    height: 600px;
     display: flex;
-    flex-flow: row-reverse wrap;
+    flex-direction: column;
+    flex-wrap: wrap-reverse;
+    justify-content: space-between;
     font-family: var(--gothampromed);
 
     *
@@ -17,201 +20,209 @@
     }
 }
 
-.item-info
+.item-category, .item-name, .item-code, .item-price,
+.item-size, .item-color, .select-size, .select-color,
+.item-description
 {
-    min-width: 550px;
+    margin-left: 50px;
+
+    {
+    }
+
+.category
+{
+    width: 550px;
+    height: 50px;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--mercury);
 
-    .category
     {
-        height: 50px;
-        flex: 0 0 auto;
-        display: flex;
-        justify-content: space-between;
-        border-bottom: 1px solid var(--mercury);
-
-        .item-category
-        {
-            align-self: center;
-            padding-left: 50px;
-            color: var(--shark);
-            font-size: 14px;
-        }
-
-        .close
-        {
-            width: 54px;
-            height: 50px;
-            background: url("images/close.svg");
-            cursor: pointer;
-        }
     }
 
-    .main-info
+    .item-category
     {
-        flex: 1 0 auto;
-    }
-
-    .item-name
-    {
-        margin-top: 40px;
-        margin-left: 50px;
+        align-self: center;
         color: var(--shark);
-        font-size: 34px;
-        line-height: 30px;
-    }
-
-    .item-code
-    {
-        margin-left: 50px;
-        color: var(--gray-chateau);
-        font-family: var(--soursesanproreg);
         font-size: 14px;
-        line-height: 35px;
     }
 
-    .item-price
+    .close
     {
-        margin: 25px * 55px 50px;
-        color: var(--chambray);
-        font-size: 22px;
-        line-height: 21px;
+        width: 54px;
+        height: 50px;
+        background: url("images/close.svg");
+        cursor: pointer;
     }
+}
 
-    .item-size, .item-color
+.item-name
+{
+    margin-top: 40px;
+    color: var(--shark);
+    font-size: 34px;
+    line-height: 30px;
+}
+
+.item-code
+{
+    color: var(--gray-chateau);
+    font-family: var(--soursesanproreg);
+    font-size: 14px;
+    line-height: 35px;
+}
+
+.item-price
+{
+    margin: 25px * 55px;
+    color: var(--chambray);
+    font-size: 22px;
+    line-height: 21px;
     {
-        margin-bottom: 10px;
-        margin-left: 50px;
-        color: var(--shark);
-        font-size: 12px;
-        text-transform: uppercase;
-        line-height: 11px;
     }
+}
 
-    .item-size
+.item-size, .item-color
+{
+    margin-bottom: 10px;
+    color: var(--shark);
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 11px;
+}
+
+.item-size
+{
+    display: inline-block;
+    padding-right: 5px;
     {
         display: inline-block;
         padding-right: 5px;
     }
+}
 
-    .size-details
+.size-details
+{
+    text-decoration: none;
+    color: var(--chambray);
+    font-family: var(--soursesanproreg);
+    font-size: 12px;
+}
+
+.select-size
+{
+    width: 450px;
+    height: 50px;
+    display: flex;
+    margin-bottom: 40px;
+    border: 1px solid var(--mercury);
+
     {
-        text-decoration: none;
-        color: var(--chambray);
-        font-family: var(--soursesanproreg);
-        font-size: 12px;
     }
 
-    .select-size
+    .size
     {
-        max-width: 450px;
-        height: 50px;
-        display: flex;
-        margin-bottom: 40px;
-        margin-left: 50px;
-        border: 1px solid var(--mercury);
+        flex: 1;
 
-        .size
+        .size-box
         {
-            flex: 1;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: -1px;
+            box-sizing: initial;
+            color: var(--shark);
+            font-size: 14px;
+            text-transform: uppercase;
+            cursor: pointer;
+        }
 
-            .size-box
-            {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-left: -1px;
-                padding: * 1px;
-                box-sizing: initial;
-                color: var(--shark);
-                font-size: 14px;
-                text-transform: uppercase;
-                cursor: pointer;
-            }
+        &:not(:last-of-type) .size-box
+        {
+            border-right: 1px solid var(--mercury);
+        }
 
-            &:not(:last-of-type) .size-box
-            {
-                border-right: 1px solid var(--mercury);
-            }
+        input[type=radio]:checked + .size-box
+        {
+            height: 46px;
+            margin-top: -1px;
+            color: var(--chambray);
+            border: 2px solid var(--chambray);
 
-            input[type=radio]:checked + .size-box
             {
-                margin-top: -2px;
-                color: var(--chambray);
-                border: 2px solid var(--chambray);
             }
         }
     }
 
-    .select-color
+.select-color
+{
+    width: 53px;
+    height: 24px;
+    display: flex;
+    justify-content: space-between;
+
+    .color
     {
-        width: 53px;
-        height: 24px;
-        display: flex;
-        justify-content: space-between;
-        margin-left: 50px;
+        width: 24px;
 
-        .color
+        .color-box
         {
-            width: 24px;
+            width: 100%;
+            height: 100%;
+            display: block;
+            cursor: pointer;
+        }
 
-            .color-box
-            {
-                width: 100%;
-                height: 100%;
-                display: block;
-                cursor: pointer;
-            }
+        &:nth-of-type(1) .color-box
+        {
+            background: var(--d-ocre);
+        }
 
-            &:nth-of-type(1) .color-box
-            {
-                background: var(--d-ocre);
-            }
+        &:nth-of-type(2) .color-box
+        {
+            background: var(--d-grey);
+        }
 
-            &:nth-of-type(2) .color-box
-            {
-                background: var(--d-grey);
-            }
-
-            input[type=radio]:checked + .color-box
-            {
-                background-image: url("images/shape.svg");
-                background-repeat: no-repeat;
-                background-position: center;
-            }
+        input[type=radio]:checked + .color-box
+        {
+            background-image: url("images/shape.svg");
+            background-repeat: no-repeat;
+            background-position: center;
         }
     }
+}
 
-    .item-description
+.item-description
+{
+    margin-top: 35px;
+    color: var(--abbey);
+    font-family: var(--soursesanproreg);
+    font-size: 14px;
+    line-height: 22px;
     {
-        margin: 35px * 48px 50px;
-        color: var(--abbey);
-        font-family: var(--soursesanproreg);
-        font-size: 14px;
-        line-height: 22px;
     }
 
-    .add-bag
+.add-bag
+{
+    max-width: 550px;
+    height: 57px;
+    padding-right: 30px;
+    background: var(--chambray);
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    text-transform: uppercase;
+    cursor: pointer;
     {
-        width: 100%;
-        height: 57px;
-        padding-right: 30px;
-        background: var(--chambray);
-        color: #fff;
-        font-size: 14px;
-        text-align: center;
-        text-transform: uppercase;
-        cursor: pointer;
     }
 }
 
 .item-image
 {
-    width: 450px;
-    height: 601px;
+    max-width: 450px;
+    max-height: 600px;
     position: relative;
 
     .image-main
