--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -143,11 +143,11 @@
     .size
     {
         flex: 1;
+        display: flex;
 
         .size-box
         {
-            width: 100%;
-            height: 100%;
+            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -189,12 +189,11 @@
     .color
     {
         width: 24px;
+        display: flex;
 
         .color-box
         {
-            width: 100%;
-            height: 100%;
-            display: block;
+            flex: 1;
             cursor: pointer;
         }
 
