--- a/app/components/item-details/variables.css
+++ b/app/components/item-details/variables.css
@@ -9,4 +9,10 @@
     --abbey: #484a4b;
     --gothampromed: "GothamProMedium" , sans-serif;
     --soursesanproreg: "SourceSansProRegular" , sans-serif;
+    --size-widht-full: 450px;
+    --size-widht-mob: 270px;
+    --size-height-full: 50px;
+    --size-height-mob: 34px;
+    --border: 1px;
+    --border-focus: 2px;
 }
