--- a/app/components/item-details/reset.css
+++ b/app/components/item-details/reset.css
@@ -12,6 +12,12 @@ input[type=submit]
 {
     border: none;
     padding: 0;
+    margin: 0;
+
+    &:focus
+    {
+        outline: none;
+    }
 }
 
 h1, h2, h3
