replace input reset to item-details styles

--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -125,6 +125,14 @@
     font-size: 12px;
 }
 
+.select-size, .select-color
+{
+    input
+    {
+        display: none;
+    }
+}
+
 .select-size
 {
     width: var(--size-widht-full);
