--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -217,12 +217,12 @@
 
         &:nth-of-type(1) .color-box
         {
-            background: var(--d-ocre);
+            background: var(--cornflower-lilac);
         }
 
         &:nth-of-type(2) .color-box
         {
-            background: var(--d-grey);
+            background: var(--swirl);
         }
 
         input[type=radio]:checked + .color-box
