--- a/app/components/item-details/variables.css
+++ b/app/components/item-details/variables.css
@@ -4,8 +4,8 @@
     --shark: #252a2d;
     --gray-chateau: #a4a7a9;
     --chambray: #384d9d;
-    --d-ocre: #ffafab;
-    --d-grey: #d2ccc3;
+    --cornflower-lilac: #ffafab;
+    --swirl: #d2ccc3;
     --abbey: #484a4b;
     --gothampromed: "GothamProMedium" , sans-serif;
     --soursesanproreg: "SourceSansProRegular" , sans-serif;
