--- a/app/components/item-details/variables.css
+++ b/app/components/item-details/variables.css
@@ -7,6 +7,6 @@
     --cornflower-lilac: #ffafab;
     --swirl: #d2ccc3;
     --abbey: #484a4b;
-    --gothampromed: "GothamProMedium" , sans-serif;
-    --soursesanproreg: "SourceSansProRegular" , sans-serif;
+    --heading-family: "GothamProMedium", Arial, Helvetica, sans-serif;
+    --paragraph-family: "SourceSansProRegular", Arial, Helvetica, sans-serif;
 }
