move stuff to shared

--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -1,8 +1,6 @@
-@import "reset.css";
-
-@import "fonts.css";
-
-@import "variables.css";
+@import "../shared/fonts.css";
+@import "../shared/reset.css";
+@import "../shared/variables.css";
 
 :root
 {
