--- a/app/components/shared/variables.css
+++ b/app/components/shared/variables.css
@@ -7,6 +7,6 @@
     --cornflower-lilac: #ffafab;
     --swirl: #d2ccc3;
     --abbey: #484a4b;
-    --heading-family: "GothamProMedium", Arial, Helvetica, sans-serif;
-    --paragraph-family: "SourceSansProRegular", Arial, Helvetica, sans-serif;
+    --heading-family: "Gotham Pro", Arial, Helvetica, sans-serif;
+    --paragraph-family: "Source Sans Pro", Arial, Helvetica, sans-serif;
 }
