--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -14,6 +14,13 @@
 
 .item-details
 {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: #fff;
     width: 1000px;
     height: 600px;
     display: flex;
