hoist backdrop decl

--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -36,6 +36,11 @@
         flex-wrap: nowrap;
     }
 
+    &::backdrop
+    {
+        background: var(--mercury);
+    }
+
     *
     {
         box-sizing: border-box;
@@ -321,9 +326,4 @@
             right: 0;
         }
     }
-}
-
-.item-details::backdrop
-{
-    background: var(--mercury);
 }
