--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -118,8 +118,8 @@
 
 .item-size
 {
+    margin-right: 5px;
     display: inline-block;
-    padding-right: 5px;
 
     @media screen and (max-width: 320px)
     {
