--- a/app/components/item-details/item-details.css
+++ b/app/components/item-details/item-details.css
@@ -61,12 +61,16 @@
     {
         width: 54px;
         height: 50px;
-        background-image: svg-load("close.svg", fill: #fff);
-        background-size: 24px;
-        background-position: center center;
-        background-repeat: no-repeat;
-        background-color: var(--shark);
         cursor: pointer;
+
+        background:
+        {
+            image: svg-load("close.svg", fill: #fff);
+            position: center;
+            size: 24px;
+            repeat: no-repeat;
+            color: var(--shark);
+        }
 
         &:hover
         {
@@ -206,10 +210,13 @@ h3
 
     :checked + .color
     {
-        background-image: svg-load("check.svg", fill: #fff);
-        background-size: 14px 12px;
-        background-repeat: no-repeat;
-        background-position: center;
+        background:
+        {
+            image: svg-load("check.svg", fill: #fff);
+            position: center;
+            size: 14px 12px;
+            repeat: no-repeat;
+        }
     }
 }
 
@@ -217,7 +224,6 @@ h3
 {
     margin-top: 35px;
     color: var(--abbey);
-    font-family: var(--paragraph-family);
     font-size: 14px;
     line-height: 22px;
 
